Bug Fixes_27Oct and GeoLocation change

--- a/app/src/main/res/layout/business_comapany_listitem.xml
+++ b/app/src/main/res/layout/business_comapany_listitem.xml
@@ -40,6 +40,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:layout_gravity="center_vertical"
             android:orientation="vertical">
 
             <TextView
@@ -47,7 +48,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/_15sdp"
-                android:layout_marginTop="@dimen/_10ssp"
                 android:fontFamily="@font/opensans_semibold"
                 android:text=""
                 android:textColor="@drawable/dba_text_enable_disable"
@@ -58,7 +58,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/_15sdp"
-                android:layout_marginTop="@dimen/_10ssp"
                 android:fontFamily="@font/opensans_regular"
                 android:text=""
                 android:textColor="@color/xdark_gray"
