--- a/app/src/main/res/layout/add_new_dba_account_alert_dialog.xml
+++ b/app/src/main/res/layout/add_new_dba_account_alert_dialog.xml
@@ -72,7 +72,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/opensans_regular"
-                android:text="number"
+                android:text=""
                 android:textColor="@color/xdark_gray"
                 android:textSize="@dimen/_11ssp" />
         </LinearLayout>
