--- a/app/src/main/res/layout/activity_sign_agreements.xml
+++ b/app/src/main/res/layout/activity_sign_agreements.xml
@@ -84,7 +84,8 @@
                     android:layout_height="wrap_content"
                     android:background="@color/white"
                     android:orientation="vertical"
-                    android:padding="@dimen/_10sdp">
+                    android:padding="@dimen/_10sdp"
+                    android:visibility="gone">
 
                     <TextView
                         android:id="@+id/signatureTV"
@@ -121,7 +122,7 @@
                         android:fontFamily="@font/opensans_regular"
                         android:textColor="@color/primary_black"
                         android:theme="@style/AppTheme"
-                        android:visibility="visible" />
+                        android:visibility="gone" />
 
                     <TextView
                         android:id="@+id/accknowledgeTV"
