--- a/app/src/main/res/layout/activity_sign_agreements.xml
+++ b/app/src/main/res/layout/activity_sign_agreements.xml
@@ -9,8 +9,10 @@
         android:orientation="vertical">
 
         <LinearLayout
+            android:id="@+id/dismissLL"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_50sdp" />
+            android:layout_height="@dimen/_50sdp"
+            android:orientation="vertical" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -73,21 +75,59 @@
                 android:visibility="gone" />
 
             <LinearLayout
+                android:id="@+id/changeSummaryLL"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginHorizontal="@dimen/_21sdp"
+                android:layout_marginTop="@dimen/_10sdp"
                 android:layout_weight="1"
-                android:background="@drawable/corner_bg_lt1"
-                android:layout_marginHorizontal="@dimen/_21sdp">
+                android:background="@drawable/non_material_sign_bg"
+                android:orientation="vertical"
+                android:padding="@dimen/_21sdp"
+                android:visibility="gone">
 
-                <TextView
-                    android:id="@+id/changeSummaryTV"
+                <ScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/opensans_bold"
-                    android:gravity="center"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/_14ssp"
-                    android:layout_margin="@dimen/_21sdp"/>
+                    android:layout_height="match_parent"
+                    android:scrollbars="none">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/changeSummaryHeaderTV"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/opensans_bold"
+                            android:gravity="left"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/_11ssp" />
+
+                        <TextView
+                            android:id="@+id/changeSummarySubHeaderTV"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/_3sdp"
+                            android:fontFamily="@font/opensans_regular"
+                            android:gravity="left"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/_10ssp" />
+
+                        <TextView
+                            android:id="@+id/changeSummaryTV"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/_10sdp"
+                            android:fontFamily="@font/opensans_regular"
+                            android:gravity="left"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/_11ssp" />
+
+                    </LinearLayout>
+                </ScrollView>
+
             </LinearLayout>
 
             <LinearLayout
