--- a/app/src/main/res/layout/dialog_pay_merchant_with_amount.xml
+++ b/app/src/main/res/layout/dialog_pay_merchant_with_amount.xml
@@ -151,6 +151,47 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/processing_fee_ll"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/_21sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:visibility="gone"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/opensans_regular"
+                android:text="@string/processing_fee"
+                android:textColor="@color/dark_grey"
+                android:textSize="@dimen/_11ssp" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/processing_fees"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/opensans_bold"
+                    android:textColor="@color/primary_black"
+                    android:textSize="@dimen/_12ssp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/opensans_semibold"
+                    android:textColor="@color/primary_black"
+                    android:contentDescription="@string/cyn"
+                    android:textSize="@dimen/_12ssp"
+                    android:text=" CYN" />
+            </LinearLayout>
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/_11sdp"
