--- a/app/src/main/res/layout/activity_verification_failed.xml
+++ b/app/src/main/res/layout/activity_verification_failed.xml
@@ -17,86 +17,95 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fillViewport="true"
         android:scrollbars="none">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:paddingStart="@dimen/_21sdp"
-            android:paddingEnd="@dimen/_21sdp"
-            android:orientation="vertical">
+            android:paddingEnd="@dimen/_21sdp">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="@dimen/_20sdp"
-                android:layout_marginBottom="@dimen/_24sdp"
-                android:src="@drawable/ic_failed" />
-
-            <TextView
+            <LinearLayout
+                android:id="@+id/layoutHead"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/_24sdp"
-                android:fontFamily="@font/opensans_bold"
-                android:gravity="center"
-                android:text="@string/application_declined"
-                android:textColor="@color/primary_black"
-                android:textSize="@dimen/_16ssp" />
+                android:layout_height="match_parent"
+                android:layout_above="@+id/cv_done"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tv_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/opensans_regular"
-                android:text="@string/dear_name"
-                android:textColor="@color/primary_black"
-                android:textSize="@dimen/_11ssp" />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/_20sdp"
+                    android:layout_marginBottom="@dimen/_24sdp"
+                    android:src="@drawable/ic_failed" />
 
-            <TextView
-                android:id="@+id/descTV"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_14sdp"
-                android:fontFamily="@font/opensans_regular"
-                android:layout_gravity="center"
-                android:text="@string/interest_in_coyni_merchant_application"
-                android:textColor="@color/primary_black"
-                android:textSize="@dimen/_12ssp" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/_24sdp"
+                    android:fontFamily="@font/opensans_bold"
+                    android:gravity="center"
+                    android:text="@string/application_declined"
+                    android:textColor="@color/primary_black"
+                    android:textSize="@dimen/_16ssp" />
 
-            <TextView
-                android:id="@+id/tv_legal_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/opensans_regular"
-                android:text="@string/legal_name_name"
-                android:textColor="@color/primary_black"
-                android:textSize="@dimen/_12ssp" />
+                <TextView
+                    android:id="@+id/tv_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/opensans_regular"
+                    android:text="@string/dear_name"
+                    android:textColor="@color/primary_black"
+                    android:textSize="@dimen/_11ssp" />
 
-            <TextView
-                android:id="@+id/tv_dba_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/opensans_regular"
-                android:text="@string/verification_dba_name"
-                android:textColor="@color/primary_black"
-                android:textSize="@dimen/_12ssp" />
+                <TextView
+                    android:id="@+id/descTV"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/_14sdp"
+                    android:fontFamily="@font/opensans_regular"
+                    android:text="@string/interest_in_coyni_merchant_application"
+                    android:textColor="@color/primary_black"
+                    android:textSize="@dimen/_12ssp" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_14sdp"
-                android:fontFamily="@font/opensans_regular"
-                android:text="@string/we_thank_for_interest"
-                android:textColor="@color/primary_black"
-                android:textSize="@dimen/_12ssp" />
+                <TextView
+                    android:id="@+id/tv_legal_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/opensans_regular"
+                    android:text="@string/legal_name_name"
+                    android:textColor="@color/primary_black"
+                    android:textSize="@dimen/_12ssp" />
+
+                <TextView
+                    android:id="@+id/tv_dba_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/opensans_regular"
+                    android:text="@string/verification_dba_name"
+                    android:textColor="@color/primary_black"
+                    android:textSize="@dimen/_12ssp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_14sdp"
+                    android:fontFamily="@font/opensans_regular"
+                    android:text="@string/we_thank_for_interest"
+                    android:textColor="@color/primary_black"
+                    android:textSize="@dimen/_12ssp" />
+
+            </LinearLayout>
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cv_done"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_20sdp"
-                android:layout_marginBottom="@dimen/_10sdp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="@dimen/_20sdp"
                 app:cardBackgroundColor="@color/primary_color"
                 app:cardCornerRadius="@dimen/_22sdp">
 
@@ -111,7 +120,6 @@
                     android:textColor="@color/white"
                     android:textSize="@dimen/_12ssp" />
             </androidx.cardview.widget.CardView>
-
-        </LinearLayout>
+        </RelativeLayout>
     </ScrollView>
 </LinearLayout>
