--- a/app/src/main/res/layout/buy_token_order_review.xml
+++ b/app/src/main/res/layout/buy_token_order_review.xml
@@ -81,11 +81,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="@dimen/_5sdp"
-                android:layout_weight="0.7"
+                android:layout_weight="0.6"
                 android:fontFamily="@font/opensans_semibold"
                 android:gravity="right"
                 android:singleLine="true"
-                android:text="Bank of America"
+                android:text="Signet"
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_11sdp" />
 
@@ -93,7 +93,7 @@
                 android:id="@+id/tvAccount"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.3"
+                android:layout_weight="1.4"
                 android:fontFamily="@font/opensans_semibold"
                 android:gravity="right"
                 android:singleLine="true"
@@ -114,7 +114,7 @@
                 android:id="@+id/imgCardType"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_visa1"/>
+                android:src="@drawable/ic_visa1" />
 
             <TextView
                 android:id="@+id/tvPayMethod"
@@ -223,22 +223,22 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-<!--        <TextView-->
-<!--            android:id="@+id/tv_lable"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginStart="8dp"-->
-<!--            android:ellipsize="end"-->
-<!--            android:gravity="center"-->
-<!--            android:paddingEnd="16dp"-->
-<!--            android:paddingRight="16dp"-->
-<!--            android:text="Slide to Confirm"-->
-<!--            android:textColor="@color/primary_green"-->
-<!--            android:textSize="@dimen/_15sdp"-->
-<!--            android:textStyle="bold"-->
-<!--            app:layout_constraintBottom_toBottomOf="@id/im_lock"-->
-<!--            app:layout_constraintStart_toEndOf="@+id/im_lock"-->
-<!--            app:layout_constraintTop_toTopOf="@+id/im_lock" />-->
+        <!--        <TextView-->
+        <!--            android:id="@+id/tv_lable"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginStart="8dp"-->
+        <!--            android:ellipsize="end"-->
+        <!--            android:gravity="center"-->
+        <!--            android:paddingEnd="16dp"-->
+        <!--            android:paddingRight="16dp"-->
+        <!--            android:text="Slide to Confirm"-->
+        <!--            android:textColor="@color/primary_green"-->
+        <!--            android:textSize="@dimen/_15sdp"-->
+        <!--            android:textStyle="bold"-->
+        <!--            app:layout_constraintBottom_toBottomOf="@id/im_lock"-->
+        <!--            app:layout_constraintStart_toEndOf="@+id/im_lock"-->
+        <!--            app:layout_constraintTop_toTopOf="@+id/im_lock" />-->
 
         <TextView
             android:id="@+id/tv_lable_verify"
@@ -253,10 +253,10 @@
             android:textColor="@color/primary_green"
             android:textSize="@dimen/_15sdp"
             android:textStyle="bold"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@id/im_lock"
             app:layout_constraintStart_toEndOf="@+id/im_lock"
-            app:layout_constraintTop_toTopOf="@+id/im_lock"
-            android:visibility="gone"/>
+            app:layout_constraintTop_toTopOf="@+id/im_lock" />
 
         <com.coyni.mapp.utils.CustomeTextView.AnimatedGradientTextView
             android:id="@+id/tv_lable"
@@ -277,9 +277,9 @@
             app:layout_constraintBottom_toBottomOf="@id/im_lock"
             app:layout_constraintStart_toEndOf="@+id/im_lock"
             app:layout_constraintTop_toTopOf="@+id/im_lock"
-            app:speed="500"
             app:maxFPS="24"
-            app:simultaneousColors="8"/>
+            app:simultaneousColors="8"
+            app:speed="500" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/im_lock"
