--- a/app/src/main/res/layout/fragment_business_dashboard.xml
+++ b/app/src/main/res/layout/fragment_business_dashboard.xml
@@ -33,8 +33,8 @@
                     android:layout_width="@dimen/_38sdp"
                     android:layout_height="@dimen/_38sdp"
                     android:layout_gravity="center_vertical"
-                    android:gravity="center"
                     android:background="@drawable/corecircle"
+                    android:gravity="center"
                     android:padding="@dimen/_2sdp">
 
                     <androidx.cardview.widget.CardView
@@ -162,8 +162,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@color/white"
-                            android:visibility="gone"
-                            android:orientation="vertical">
+                            android:orientation="vertical"
+                            android:visibility="gone">
 
                             <TextView
                                 android:id="@+id/tv_officially_verified"
@@ -368,8 +368,8 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="@dimen/_11sdp"
-                                android:layout_marginBottom="@dimen/_22sdp"
                                 android:layout_marginEnd="@dimen/_11sdp"
+                                android:layout_marginBottom="@dimen/_22sdp"
                                 android:fontFamily="@font/opensans_regular"
                                 android:text="@string/merchant_balance"
                                 android:textColor="@color/dark_grey"
@@ -910,92 +910,91 @@
                                     android:id="@+id/spannableTextView"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
+                                    android:layout_marginStart="@dimen/_11sdp"
+                                    android:layout_marginEnd="@dimen/_11sdp"
                                     android:fontFamily="@font/opensans_regular"
                                     android:text=""
                                     android:textColor="@color/dark_grey"
-                                    android:textSize="@dimen/_11ssp"
-                                    android:layout_marginStart="@dimen/_11sdp"
-                                    android:layout_marginEnd="@dimen/_11sdp"
-                                    />
+                                    android:textSize="@dimen/_11ssp" />
                             </LinearLayout>
 
-<!--                                <LinearLayout-->
-<!--                                    android:layout_width="wrap_content"-->
-<!--                                    android:layout_height="wrap_content"-->
-<!--                                    android:orientation="horizontal">-->
+                            <!--                                <LinearLayout-->
+                            <!--                                    android:layout_width="wrap_content"-->
+                            <!--                                    android:layout_height="wrap_content"-->
+                            <!--                                    android:orientation="horizontal">-->
 
-<!--                                    <TextView-->
-<!--                                        android:layout_width="wrap_content"-->
-<!--                                        android:layout_height="wrap_content"-->
-<!--                                        android:layout_marginStart="@dimen/_11sdp"-->
-<!--                                        android:layout_weight="1"-->
-<!--                                        android:fontFamily="@font/opensans_regular"-->
-<!--                                        android:text="@string/all_p_deposit"-->
-<!--                                        android:textColor="@color/dark_grey"-->
-<!--                                        android:textSize="@dimen/_10ssp" />-->
+                            <!--                                    <TextView-->
+                            <!--                                        android:layout_width="wrap_content"-->
+                            <!--                                        android:layout_height="wrap_content"-->
+                            <!--                                        android:layout_marginStart="@dimen/_11sdp"-->
+                            <!--                                        android:layout_weight="1"-->
+                            <!--                                        android:fontFamily="@font/opensans_regular"-->
+                            <!--                                        android:text="@string/all_p_deposit"-->
+                            <!--                                        android:textColor="@color/dark_grey"-->
+                            <!--                                        android:textSize="@dimen/_10ssp" />-->
 
-<!--                                    <TextView-->
-<!--                                        android:layout_width="wrap_content"-->
-<!--                                        android:layout_height="wrap_content"-->
-<!--                                        android:layout_marginStart="@dimen/_3sdp"-->
-<!--                                        android:layout_weight="1"-->
-<!--                                        android:fontFamily="@font/opensans_bold"-->
-<!--                                        android:text="@string/businesstoken"-->
-<!--                                        android:textColor="@color/dark_grey"-->
-<!--                                        android:textSize="@dimen/_10ssp" />-->
-<!--                                </LinearLayout>-->
+                            <!--                                    <TextView-->
+                            <!--                                        android:layout_width="wrap_content"-->
+                            <!--                                        android:layout_height="wrap_content"-->
+                            <!--                                        android:layout_marginStart="@dimen/_3sdp"-->
+                            <!--                                        android:layout_weight="1"-->
+                            <!--                                        android:fontFamily="@font/opensans_bold"-->
+                            <!--                                        android:text="@string/businesstoken"-->
+                            <!--                                        android:textColor="@color/dark_grey"-->
+                            <!--                                        android:textSize="@dimen/_10ssp" />-->
+                            <!--                                </LinearLayout>-->
 
-<!--                                <LinearLayout-->
-<!--                                    android:layout_width="wrap_content"-->
-<!--                                    android:layout_height="wrap_content"-->
-<!--                                    android:orientation="horizontal">-->
+                            <!--                                <LinearLayout-->
+                            <!--                                    android:layout_width="wrap_content"-->
+                            <!--                                    android:layout_height="wrap_content"-->
+                            <!--                                    android:orientation="horizontal">-->
 
-<!--                                    <TextView-->
-<!--                                        android:layout_width="wrap_content"-->
-<!--                                        android:layout_height="wrap_content"-->
-<!--                                        android:layout_marginStart="@dimen/_11sdp"-->
-<!--                                        android:layout_weight="1"-->
-<!--                                        android:fontFamily="@font/opensans_bold"-->
-<!--                                        android:text="@string/ac"-->
-<!--                                        android:textColor="@color/dark_grey"-->
-<!--                                        android:textSize="@dimen/_10ssp" />-->
+                            <!--                                    <TextView-->
+                            <!--                                        android:layout_width="wrap_content"-->
+                            <!--                                        android:layout_height="wrap_content"-->
+                            <!--                                        android:layout_marginStart="@dimen/_11sdp"-->
+                            <!--                                        android:layout_weight="1"-->
+                            <!--                                        android:fontFamily="@font/opensans_bold"-->
+                            <!--                                        android:text="@string/ac"-->
+                            <!--                                        android:textColor="@color/dark_grey"-->
+                            <!--                                        android:textSize="@dimen/_10ssp" />-->
 
-<!--                                    <TextView-->
-<!--                                        android:layout_width="wrap_content"-->
-<!--                                        android:layout_height="wrap_content"-->
-<!--                                        android:layout_weight="1"-->
-<!--                                        android:fontFamily="@font/opensans_regular"-->
-<!--                                        android:text="@string/a_u_pay"-->
-<!--                                        android:textColor="@color/dark_gray"-->
-<!--                                        android:textSize="@dimen/_10ssp" />-->
-<!--                                </LinearLayout>-->
+                            <!--                                    <TextView-->
+                            <!--                                        android:layout_width="wrap_content"-->
+                            <!--                                        android:layout_height="wrap_content"-->
+                            <!--                                        android:layout_weight="1"-->
+                            <!--                                        android:fontFamily="@font/opensans_regular"-->
+                            <!--                                        android:text="@string/a_u_pay"-->
+                            <!--                                        android:textColor="@color/dark_gray"-->
+                            <!--                                        android:textSize="@dimen/_10ssp" />-->
+                            <!--                                </LinearLayout>-->
 
-<!--                                <LinearLayout-->
-<!--                                    android:layout_width="wrap_content"-->
-<!--                                    android:layout_height="wrap_content"-->
-<!--                                    android:orientation="horizontal">-->
+                            <!--                                <LinearLayout-->
+                            <!--                                    android:layout_width="wrap_content"-->
+                            <!--                                    android:layout_height="wrap_content"-->
+                            <!--                                    android:orientation="horizontal">-->
 
-<!--                                    <TextView-->
-<!--                                        android:layout_width="wrap_content"-->
-<!--                                        android:layout_height="wrap_content"-->
-<!--                                        android:layout_marginStart="@dimen/_11sdp"-->
+                            <!--                                    <TextView-->
+                            <!--                                        android:layout_width="wrap_content"-->
+                            <!--                                        android:layout_height="wrap_content"-->
+                            <!--                                        android:layout_marginStart="@dimen/_11sdp"-->
 
-<!--                                        android:layout_weight="1"-->
-<!--                                        android:fontFamily="@font/opensans_regular"-->
-<!--                                        android:text="@string/outAt"-->
-<!--                                        android:textColor="@color/dark_grey"-->
-<!--                                        android:textSize="@dimen/_10ssp" />-->
+                            <!--                                        android:layout_weight="1"-->
+                            <!--                                        android:fontFamily="@font/opensans_regular"-->
+                            <!--                                        android:text="@string/outAt"-->
+                            <!--                                        android:textColor="@color/dark_grey"-->
+                            <!--                                        android:textSize="@dimen/_10ssp" />-->
 
-<!--                                    <TextView-->
-<!--                                        android:id="@+id/payoutTimeTV"-->
-<!--                                        android:layout_width="wrap_content"-->
-<!--                                        android:layout_height="wrap_content"-->
-<!--                                        android:layout_weight="1"-->
-<!--                                        android:fontFamily="@font/opensans_bold"-->
-<!--                                        android:text=" 11:59:59 pm PST"-->
-<!--                                        android:textColor="@color/dark_grey"-->
-<!--                                        android:textSize="@dimen/_10ssp" />-->
-<!--                                </LinearLayout>-->
+                            <!--                                    <TextView-->
+                            <!--                                        android:id="@+id/payoutTimeTV"-->
+                            <!--                                        android:layout_width="wrap_content"-->
+                            <!--                                        android:layout_height="wrap_content"-->
+                            <!--                                        android:layout_weight="1"-->
+                            <!--                                        android:fontFamily="@font/opensans_bold"-->
+                            <!--                                        android:text=" 11:59:59 pm PST"-->
+                            <!--                                        android:textColor="@color/dark_grey"-->
+                            <!--                                        android:textSize="@dimen/_10ssp" />-->
+                            <!--                                </LinearLayout>-->
 
                             <LinearLayout
                                 android:layout_width="match_parent"
@@ -1046,9 +1045,9 @@
                                             android:layout_marginTop="@dimen/_2sdp"
                                             android:fontFamily="@font/opensans_semibold"
                                             android:text="@string/currency"
-                                            android:visibility="visible"
                                             android:textColor="@color/primary_black"
-                                            android:textSize="@dimen/_10ssp" />
+                                            android:textSize="@dimen/_10ssp"
+                                            android:visibility="visible" />
 
                                     </LinearLayout>
 
@@ -1103,9 +1102,9 @@
                                             android:layout_marginTop="@dimen/_2sdp"
                                             android:fontFamily="@font/opensans_semibold"
                                             android:text="@string/currency"
-                                            android:visibility="visible"
                                             android:textColor="@color/primary_black"
-                                            android:textSize="@dimen/_10ssp" />
+                                            android:textSize="@dimen/_10ssp"
+                                            android:visibility="visible" />
                                     </LinearLayout>
 
                                     <TextView
@@ -1502,17 +1501,17 @@
                                 android:textSize="@dimen/_11ssp"
                                 android:visibility="visible" />
 
-<!--                            <TextView-->
-<!--                                android:id="@+id/disable_reserve_list"-->
-<!--                                android:layout_width="wrap_content"-->
-<!--                                android:layout_height="wrap_content"-->
-<!--                                android:layout_gravity="center"-->
-<!--                                android:layout_marginTop="@dimen/_10sdp"-->
-<!--                                android:layout_marginBottom="@dimen/_21sdp"-->
-<!--                                android:fontFamily="@font/opensans_bold"-->
-<!--                                android:text="@string/v_r_history"-->
-<!--                                android:textColor="@color/dark_gray"-->
-<!--                                android:textSize="@dimen/_11ssp" />-->
+                            <!--                            <TextView-->
+                            <!--                                android:id="@+id/disable_reserve_list"-->
+                            <!--                                android:layout_width="wrap_content"-->
+                            <!--                                android:layout_height="wrap_content"-->
+                            <!--                                android:layout_gravity="center"-->
+                            <!--                                android:layout_marginTop="@dimen/_10sdp"-->
+                            <!--                                android:layout_marginBottom="@dimen/_21sdp"-->
+                            <!--                                android:fontFamily="@font/opensans_bold"-->
+                            <!--                                android:text="@string/v_r_history"-->
+                            <!--                                android:textColor="@color/dark_gray"-->
+                            <!--                                android:textSize="@dimen/_11ssp" />-->
 
 
                         </LinearLayout>
