SignUp, AddCard and Dashboard

--- a/app/src/main/res/layout/activity_all_done_card.xml
+++ b/app/src/main/res/layout/activity_all_done_card.xml
@@ -26,6 +26,7 @@
         android:textSize="@dimen/_16ssp" />
 
     <TextView
+        android:id="@+id/subHeaderTV"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_59sdp"
         android:layout_below="@+id/tvHead"
