--- a/app/src/main/res/layout/activity_addcard.xml
+++ b/app/src/main/res/layout/activity_addcard.xml
@@ -37,6 +37,7 @@
                     android:orientation="horizontal">
 
                     <ImageView
+                        android:id="@+id/closeIV"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/ic_back" />
@@ -391,7 +392,7 @@
                             android:id="@+id/tvAddMsg"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/opensans_semibold"
+                            android:fontFamily="@font/opensans_regular"
                             android:text="Please confirm your billing address"
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_12ssp" />
@@ -769,6 +770,18 @@
                             </com.google.android.material.textfield.TextInputLayout>
                         </RelativeLayout>
 
+                        <CheckBox
+                            android:id="@+id/saveAddressCB"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/_11sdp"
+                            android:fontFamily="@font/opensans_regular"
+                            android:text="@string/save_this_address_as_my_account_address"
+                            android:textColor="@color/primary_black"
+                            android:textSize="@dimen/_12ssp"
+                            android:theme="@style/AppTheme"
+                            android:visibility="gone" />
+
                         <androidx.cardview.widget.CardView
                             android:id="@+id/cvAddCard"
                             android:layout_width="match_parent"
@@ -780,6 +793,7 @@
                             app:cardElevation="0dp">
 
                             <TextView
+                                android:id="@+id/addCardTV"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
