merchant transaction list and filter changes.

--- a/app/src/main/res/layout/merchant_transactions_filter.xml
+++ b/app/src/main/res/layout/merchant_transactions_filter.xml
@@ -82,13 +82,13 @@
                     android:orientation="horizontal">
 
                     <com.google.android.material.chip.Chip
-                        android:id="@+id/transTypeSalesOrderEcomerce"
+                        android:id="@+id/transTypeSalesOrder"
                         style="@style/Widget.MaterialComponents.Chip.Choice"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/opensans_semibold"
-                        android:text="Sale Order- eCommerce"
+                        android:text="Sale Order"
                         android:layout_marginRight="@dimen/_10sdp"
                         android:textAlignment="center"
                         android:textColor="@color/chip_text_color"
@@ -96,14 +96,15 @@
                         app:chipBackgroundColor="@color/chipbackgroundcolor"
                         app:chipMinHeight="@dimen/_32sdp" />
 
+
                     <com.google.android.material.chip.Chip
-                        android:id="@+id/transTypeSalesOrderRetail"
+                        android:id="@+id/transTypeRefund"
                         style="@style/Widget.MaterialComponents.Chip.Choice"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:fontFamily="@font/opensans_semibold"
-                        android:text="Sale Order- Retail/Mobile"
+                        android:text="@string/refund"
                         android:textAlignment="center"
                         android:textColor="@color/chip_text_color"
                         android:textSize="@dimen/_11ssp"
@@ -120,14 +121,14 @@
                     android:orientation="horizontal">
 
                     <com.google.android.material.chip.Chip
-                        android:id="@+id/transTypeRefund"
+                        android:id="@+id/transTypeMonthlyServiceFee"
                         style="@style/Widget.MaterialComponents.Chip.Choice"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:layout_marginEnd="@dimen/_10sdp"
                         android:fontFamily="@font/opensans_semibold"
-                        android:text="@string/refund"
-                        android:layout_marginRight="@dimen/_10sdp"
+                        android:text="@string/monthly_service_fee"
                         android:textAlignment="center"
                         android:textColor="@color/chip_text_color"
                         android:textSize="@dimen/_11ssp"
@@ -150,89 +151,51 @@
 
                 </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/_8sdp"
-                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_15sdp"
+                    android:layout_marginBottom="@dimen/_12sdp"
+                    android:fontFamily="@font/opensans_semibold"
+                    android:text="Transaction Sub Type"
+                    android:textColor="@color/primary_black"
+                    android:textSize="@dimen/_11ssp" />
 
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/transTypeMonthlyServiceFee"
-                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:layout_marginEnd="@dimen/_10sdp"
-                    android:fontFamily="@font/opensans_semibold"
-                    android:text="@string/monthly_service_fee"
-                    android:textAlignment="center"
-                    android:textColor="@color/chip_text_color"
-                    android:textSize="@dimen/_11ssp"
-                    app:chipBackgroundColor="@color/chipbackgroundcolor"
-                    app:chipMinHeight="@dimen/_32sdp" />
+                    android:layout_marginBottom="@dimen/_8sdp"
+                    android:orientation="horizontal">
 
-                <com.google.android.material.chip.Chip
-                    style="@style/Widget.MaterialComponents.Chip.Choice"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="@dimen/_10sdp"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/opensans_semibold"
-                    android:text="@string/merchant_payout"
-                    android:textAlignment="center"
-                    android:textColor="@color/chip_text_color"
-                    android:textSize="@dimen/_11ssp"
-                    android:visibility="invisible"
-                    app:chipBackgroundColor="@color/chipbackgroundcolor"
-                    app:chipMinHeight="@dimen/_32sdp" />
+                    <com.google.android.material.chip.Chip
+                        android:id="@+id/transSubTypeEcommerce"
+                        style="@style/Widget.MaterialComponents.Chip.Choice"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="@dimen/_10sdp"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/opensans_semibold"
+                        android:text="eCommerce"
+                        android:textAlignment="center"
+                        android:textColor="@color/chip_text_color"
+                        android:textSize="@dimen/_11ssp"
+                        app:chipBackgroundColor="@color/chipbackgroundcolor"
+                        app:chipMinHeight="@dimen/_32sdp" />
 
-            </LinearLayout>
+                    <com.google.android.material.chip.Chip
+                        android:id="@+id/transSubTypeRetail"
+                        style="@style/Widget.MaterialComponents.Chip.Choice"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/opensans_semibold"
+                        android:text="Retail / Mobile"
+                        android:textAlignment="center"
+                        android:textColor="@color/chip_text_color"
+                        android:textSize="@dimen/_11ssp"
+                        app:chipBackgroundColor="@color/chipbackgroundcolor"
+                        app:chipMinHeight="@dimen/_32sdp" />
 
-<!--                <TextView-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="@dimen/_15sdp"-->
-<!--                    android:layout_marginBottom="@dimen/_12sdp"-->
-<!--                    android:fontFamily="@font/opensans_semibold"-->
-<!--                    android:text="Transaction Sub Type"-->
-<!--                    android:textColor="@color/primary_black"-->
-<!--                    android:textSize="@dimen/_11ssp" />-->
-
-<!--                <LinearLayout-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_marginBottom="@dimen/_8sdp"-->
-<!--                    android:orientation="horizontal">-->
-
-<!--                    <com.google.android.material.chip.Chip-->
-<!--                        android:id="@+id/transSubTypeEcommerce"-->
-<!--                        style="@style/Widget.MaterialComponents.Chip.Choice"-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:layout_marginRight="@dimen/_10sdp"-->
-<!--                        android:layout_weight="1"-->
-<!--                        android:fontFamily="@font/opensans_semibold"-->
-<!--                        android:text="eCommerce"-->
-<!--                        android:textAlignment="center"-->
-<!--                        android:textColor="@color/chip_text_color"-->
-<!--                        android:textSize="@dimen/_11ssp"-->
-<!--                        app:chipBackgroundColor="@color/chipbackgroundcolor"-->
-<!--                        app:chipMinHeight="@dimen/_32sdp" />-->
-
-<!--                    <com.google.android.material.chip.Chip-->
-<!--                        android:id="@+id/transSubTypeRetail"-->
-<!--                        style="@style/Widget.MaterialComponents.Chip.Choice"-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:layout_weight="1"-->
-<!--                        android:fontFamily="@font/opensans_semibold"-->
-<!--                        android:text="Retail / Mobile"-->
-<!--                        android:textAlignment="center"-->
-<!--                        android:textColor="@color/chip_text_color"-->
-<!--                        android:textSize="@dimen/_11ssp"-->
-<!--                        app:chipBackgroundColor="@color/chipbackgroundcolor"-->
-<!--                        app:chipMinHeight="@dimen/_32sdp" />-->
-
-<!--                </LinearLayout>-->
+                </LinearLayout>
 
                 <TextView
                     android:layout_width="match_parent"
