--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -18,7 +18,8 @@
         <RelativeLayout
             android:id="@+id/cvSmallHeaderRL"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:visibility="gone">
 
             <ImageView
                 android:layout_width="match_parent"
@@ -122,7 +123,7 @@
             android:id="@+id/cvHeaderRL"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_229sdp"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <View
                 android:layout_width="match_parent"
@@ -389,7 +390,7 @@
                             android:layout_marginTop="@dimen/_16sdp"
                             android:layout_marginEnd="1dp"
                             android:layout_marginBottom="1dp"
-                            android:visibility="visible"
+                            android:visibility="gone"
                             app:cardBackgroundColor="@color/white"
                             app:cardCornerRadius="@dimen/_10sdp">
 
@@ -489,7 +490,7 @@
                             android:layout_marginTop="@dimen/_16sdp"
                             android:layout_marginEnd="1dp"
                             android:layout_marginBottom="1dp"
-                            android:visibility="visible"
+                            android:visibility="gone"
                             app:cardBackgroundColor="@color/white"
                             app:cardCornerRadius="@dimen/_10sdp">
 
@@ -846,7 +847,8 @@
                     android:layout_height="match_parent"
                     android:layout_below="@+id/statusCardsRL"
                     android:layout_alignParentBottom="true"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:visibility="gone">
 
                     <TextView
                         android:layout_width="wrap_content"
